fix: fix tab order for rich text editor fix: fix tab nav causing page to overflow

--- a/app/styles/components/content-editor.styl
+++ b/app/styles/components/content-editor.styl
@@ -52,6 +52,8 @@
 .__mobiledoc-editor.__has-no-content:after
 	top 1em
 .mobiledoc-editor
+	display flex
+	flex-direction column-reverse
 	&__link-prompt
 		background-color #464646
 		color inherit
