--- a/app/styles/components/tab-nav.styl
+++ b/app/styles/components/tab-nav.styl
@@ -1,6 +1,7 @@
 .tab-nav
 	&-item
 		display inline-block
+		white-space nowrap
 		text-align center
 		flex 1
 		&-link
@@ -20,3 +21,4 @@
 		width 100%
 		display flex
 		justify-content space-between
+		flex-wrap wrap
